--- a/packages/webdriverjs/tsconfig.json
+++ b/packages/webdriverjs/tsconfig.json
@@ -1,23 +1,4 @@
 {
-  "compilerOptions": {
-    "moduleResolution": "node",
-    "target": "esnext",
-    "module": "esnext",
-    "lib": ["esnext", "dom"],
-    "strict": true,
-    "pretty": true,
-    "sourceMap": true,
-    "declaration": true,
-    "outDir": "dist",
-    "typeRoots": ["node_modules/@types"],
-    "esModuleInterop": true,
-    "skipLibCheck": true
-  },
-  "ts-node": {
-    "compilerOptions": {
-      "module": "commonjs",
-      "target": "es5"
-    }
-  },
+  "extends": "../../tsconfig.json",
   "include": ["src"]
 }
