--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -70,7 +70,7 @@
     "ts-node": "^10.9.1",
     "tsup": "^6.7.0",
     "typescript": "^4.8.4",
-    "webdriverio": "^8.8.2"
+    "webdriverio": "8.8.2"
   },
   "peerDependencies": {
     "webdriverio": "^5 || ^6 || ^7 || ^8"
