--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,6 +40,10 @@ jobs:
         run: npx browser-driver-manager install chromedriver --verbose
         working-directory: packages/puppeteer
       - run: npm run build --workspace=packages/puppeteer
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@d23c2722bdab893785c9fbeae314cbf080645bd7
+        with:
+          limit-access-to-actor: true
       - run: npm run coverage --workspace=packages/puppeteer
       - run: npm run test:esm --workspace=packages/puppeteer
 
