--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
       matrix:
         node: [16, 18, 20]
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    # timeout-minutes: 15
     needs: lint
     steps:
       - uses: actions/checkout@v3
