--- a/.github/workflows/generate-commit-list.yml
+++ b/.github/workflows/generate-commit-list.yml
@@ -6,6 +6,7 @@ jobs:
   generate-commit-list:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: dequelabs/axe-api-team-public/.github/actions/generate-commit-list-v1@53e1d38a780c8b4bde37e2d4493b9f37f1917340
         id: generate-commit-list
         with:
