--- a/.github/workflows/generate-commit-list.yml
+++ b/.github/workflows/generate-commit-list.yml
@@ -3,16 +3,6 @@ name: Generate Commit List
 on: [push]
 
 jobs:
-  another-thing:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Debug Git
-        run: |
-          echo "Current Commit: $(git rev-parse HEAD)"
-          echo "Origin Master: $(git origins/master)"
   generate-commit-list:
     runs-on: ubuntu-latest
     steps:
@@ -24,5 +14,11 @@ jobs:
         with:
           base: master
           head: develop
-      - name: Print commit list
-        run: echo "${{ steps.generate-commit-list.outputs.commit-list }}"
+      - name: Save commit-list as JSON
+        run: |
+          echo "${{ steps.generate-commit-list.outputs.commit-list }}" > commit-list.json
+      - name: Save as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: commit-list
+          path: commit-list.json
