--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -44,7 +44,7 @@
   ],
   "dependencies": {
     "@axe-core/webdriverjs": "^4.7.3",
-    "axe-core": "~4.7.0",
+    "axe-core": "^4.7.0",
     "chromedriver": "latest",
     "colors": "^1.4.0",
     "commander": "^9.4.1",
