--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -53,7 +53,10 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "axe-core": "~4.7.0"
+    "axe-core": "^4.7.0"
+  },
+  "peerDependencies": {
+    "puppeteer": ">=1.10.0"
   },
   "engines": {
     "node": ">=6.4.0"
