--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -44,7 +44,7 @@
     "express": "^4.18.2",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
-    "puppeteer": "^19.7.3",
+    "puppeteer": "19.7.3",
     "sinon": "^14.0.1",
     "source-map-support": "^0.5.21",
     "test-listen": "^1.1.0",
