--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -48,7 +48,7 @@
     "prepare": "npx playwright install && npm run build"
   },
   "dependencies": {
-    "axe-core": "^4.8.2"
+    "axe-core": "~4.8.2"
   },
   "devDependencies": {
     "@playwright/test": "^1.34.3",
