--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -53,7 +53,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "axe-core": "^4.8.2"
+    "axe-core": "~4.8.2"
   },
   "peerDependencies": {
     "puppeteer": ">=1.10.0"
