--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -57,7 +57,7 @@
   "author": "Dylan Barrell (dylan@barrell.com)",
   "license": "MPL-2.0",
   "dependencies": {
-    "axe-core": "^4.8.2",
+    "axe-core": "~4.8.2",
     "requestidlecallback": "^0.3.0"
   },
   "devDependencies": {
