--- a/packages/reporter-earl/package.json
+++ b/packages/reporter-earl/package.json
@@ -43,7 +43,7 @@
     "@types/clone": "^2.1.1",
     "@types/jsonld": "github:types/jsonld",
     "@types/node": "^18.8.3",
-    "axe-core": "^4.8.2",
+    "axe-core": "~4.8.2",
     "clone": "^2.1.2",
     "cross-env": "^7.0.3",
     "jest": "^29.1.2",
