--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -87,7 +87,7 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "axe-core": "^4.8.2"
+    "axe-core": "~4.8.2"
   },
   "peerDependencies": {
     "selenium-webdriver": ">3.0.0-beta  || >=2.53.1 || >4.0.0-alpha"
