--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "fmt": "prettier --write .",
     "lint": "eslint .",
     "prepare": "husky install",
-    "precommit": "lint-staged"
+    "precommit": "lint-staged",
+    "release": "standard-version --conventional-commits --no-push --no-git-tag-version --yes"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.40.0",
@@ -25,6 +26,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "react": "^17.0.0",
+    "standard-version": "^9.5.0",
     "typescript": "^4.8.4"
   },
   "prettier": {
