--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,13 +3,13 @@ name: Deploy
 on:
   push:
     branches:
-      - develop
+      - build/packages
       - master
 
 jobs:
   canary:
     runs-on: ubuntu-latest
-    if: github.ref_name == 'develop' && github.repository_owner == 'dequelabs'
+    if: github.ref_name == 'build/packages' && github.repository_owner == 'dequelabs'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
