--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint .",
     "prepare": "husky install",
     "precommit": "lint-staged",
-    "build": "lerna run build"
+    "build": "npm run --workspaces build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.40.0",
