--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
             --yes
       - run: |
           PKG_VERSION=$(jq -r .version < lerna.json)
-          gh release create v$PKG_VERSION \
-            --title "Release v$PKG_VERSION" \
+          gh release create $PKG_VERSION \
+            --title "Release $PKG_VERSION" \
             --generate-notes \
             --repo ${{ github.repository }}
