--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "license": "MPL-2.0",
   "workspaces": [
     "packages/*",
-    "test/axe-core"
+    "test/axe-core",
+    "test/wdio"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
