--- a/.github/workflows/update-axe-core.yml
+++ b/.github/workflows/update-axe-core.yml
@@ -14,32 +14,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 16
-      - id: update
-        uses: dequelabs/update-axe-core@v1
-      - id: type
-        run: |
-          CommitType=""
-          if [ "${{ steps.update.outputs.patch_version_updated }}" == "true" ]; then
-            CommitType="fix"
-          elif [ "${{ steps.update.outputs.minor_version_updated }}" == "true" ]; then
-            CommitType="feat"
-          elif [ "${{ steps.update.outputs.major_version_updated }}" == "true" ]; then
-            CommitType="feat"
-          else
-            echo "No axe-core update available. Cancelling."
-            gh run cancel ${{ github.run_id }};
-            gh run watch ${{ github.run_id }};
-          fi
-          echo "type=$CommitType" >>"$GITHUB_OUTPUT"
-      - name: Open PR
-        uses: peter-evans/create-pull-request@v4
+      - uses: dequelabs/axe-api-team-public/.github/actions/create-update-axe-core-pull-request-v1@main
         with:
-          token: ${{ secrets.PAT }}
-          commit-message: '${{ steps.type.outputs.type }}: Update axe-core to v${{ steps.update.outputs.version }}'
-          branch: auto-update-axe-core
-          base: develop
-          title: '${{ steps.type.outputs.type }}: Update axe-core to v${{ steps.update.outputs.version }}'
-          body: |
-            This patch updates version of [`axe-core`](https://npmjs.org/axe-core) to v${{ steps.update.outputs.version }}.
-
-            This PR was opened by a robot :robot: :tada:.
+          token: ${{ secrets.GITHUB_TOKEN }}
