--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -56,14 +56,13 @@
     "@types/express": "^4.17.14",
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.8.10",
-    "@types/test-listen": "^1.1.0",
+    "async-listen": "^3.0.1",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
     "express": "^4.18.2",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
-    "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
     "tsup": "^7.2.0",
     "typescript": "^4.8.4"
