--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -37,7 +37,7 @@
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.8.10",
     "@types/sinon": "^10.0.13",
-    "@types/test-listen": "^1.1.0",
+    "async-listen": "^3.0.1",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
     "cross-dirname": "^0.1.0",
@@ -47,7 +47,6 @@
     "puppeteer": "19.7.3",
     "sinon": "^14.0.1",
     "source-map-support": "^0.5.21",
-    "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
     "tsup": "^7.2.0",
     "typescript": "^4.8.4"
