--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -72,7 +72,7 @@
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.8.10",
     "@types/selenium-webdriver": "^4.1.5",
-    "@types/test-listen": "^1.1.0",
+    "async-listen": "^3.0.1",
     "axe-test-fixtures": "github:dequelabs/axe-test-fixtures#v1",
     "chai": "^4.3.6",
     "chromedriver": "latest",
@@ -81,7 +81,6 @@
     "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
     "selenium-webdriver": "^4.8.1",
-    "test-listen": "^1.1.0",
     "ts-node": "^10.9.1",
     "tsup": "^7.2.0",
     "typescript": "^4.8.4"
