fix(webdriverjs): fix default commonJs export

--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -43,7 +43,9 @@
     "prebuild": "rimraf dist",
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "test": "mocha --timeout 60000 -r ts-node/register 'test/**.spec.ts'",
+    "test:export": "npm run test:esm && npm run test:commonjs",
     "test:esm": "node test/esmTest.mjs",
+    "test:commonjs": "node test/commonjsTest.js",
     "coverage": "nyc npm run test",
     "prepare": "npx playwright install && npm run build"
   },
