--- a/packages/reporter-earl/package.json
+++ b/packages/reporter-earl/package.json
@@ -15,7 +15,9 @@
   "scripts": {
     "start": "NODE_OPTIONS=--experimental-vm-modules jest --watch --env=jsdom",
     "test": "npm run build && npm run test:unit",
-    "test:esm": "node esmTest.mjs",
+    "test:export": "npm run test:esm && npm run test:commonjs",
+    "test:esm": "node tests/esmTest.mjs",
+    "test:commonjs": "node tests/commonjsTest.js",
     "test:unit": "NODE_OPTIONS=--experimental-vm-modules jest --collectCoverage",
     "build": "tsup src/axeReporterEarl.ts --dts --format esm,cjs",
     "prepublishOnly": "npm run build"
