--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "build": "tsup index.ts --dts --format esm,cjs",
     "prepare": "npm run build",
-    "test": "tsc && npm run test:types && jest",
+    "test": "npm run test:types && jest",
     "test:export": "npm run test:esm && npm run test:commonjs",
     "test:esm": "node test/esmTest.mjs",
     "test:commonjs": "node test/commonjsTest.js",
