--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,6 +31,9 @@ updates:
         versions: ['>=6.0.0']
       - dependency-name: 'node-fetch'
         versions: ['>=3.0.0']
+      # Breaking change due to node version requirements
+      - dependency-name: 'commander'
+        versions: ['>=10.0.0']
     groups:
       # Any updates not caught by the group config will get individual PRs
       npm-low-risk:
