--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,7 +41,7 @@ jobs:
         working-directory: packages/puppeteer
       - run: npm run build --workspace=packages/puppeteer
       - run: npm run coverage --workspace=packages/puppeteer
-      - run: npm run test:esm --workspace=packages/puppeteer
+      - run: npm run test:export --workspace=packages/puppeteer
 
   cli:
     strategy:
@@ -83,7 +83,7 @@ jobs:
         working-directory: packages/webdriverjs
       - run: npm run build --workspace=packages/webdriverjs
       - run: npm run coverage --workspace=packages/webdriverjs
-      - run: npm run test:esm --workspace=packages/webdriverjs
+      - run: npm run test:export --workspace=packages/webdriverjs
 
   webdriverio:
     strategy:
@@ -105,7 +105,7 @@ jobs:
         working-directory: packages/webdriverio
       - run: npm run build --workspace=packages/webdriverio
       - run: npm run coverage --workspace=packages/webdriverio
-      - run: npm run test:esm --workspace=packages/webdriverio
+      - run: npm run test:export --workspace=packages/webdriverio
 
   reporter_earl:
     strategy:
@@ -123,7 +123,7 @@ jobs:
       - run: npm ci
       - run: npm run build --workspace=packages/reporter-earl
       - run: npm run test --workspace=packages/reporter-earl
-      - run: npm run test:esm --workspace=packages/reporter-earl
+      - run: npm run test:export --workspace=packages/reporter-earl
 
   react:
     strategy:
@@ -139,9 +139,12 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
       - run: npm ci
-      - run: npm run build --workspace=packages/react
       - run: npm run test --workspace=packages/react
-      - run: npm run test:esm --workspace=packages/react
+      # the tests builds the project using tsc and relies on `cache.ts` to be
+      # built and be it's own file. however we don't want that for the export
+      # test so we need to rebuild using tsup
+      - run: npm run build --workspace=packages/react
+      - run: npm run test:export --workspace=packages/react
 
   playwright:
     strategy:
@@ -160,7 +163,7 @@ jobs:
       - run: npx playwright install --with-deps
       - run: npm run build --workspace=packages/playwright
       - run: npm run coverage --workspace=packages/playwright
-      - run: npm run test:esm --workspace=packages/playwright
+      - run: npm run test:export --workspace=packages/playwright
 
   wdio_globals_test:
     strategy:
