chore: test built types export

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -28,9 +28,10 @@
     "build": "tsup index.ts --dts --format esm,cjs",
     "prepare": "npm run build",
     "test": "tsc && npm run test:types && jest",
-    "test:export": "npm run test:esm && npm run test:commonjs",
+    "test:export": "npm run test:esm && npm run test:commonjs && npm run test:ts",
     "test:esm": "node test/esmTest.mjs",
     "test:commonjs": "node test/commonjsTest.js",
+    "test:ts": "tsc test/tsTest.ts --noEmit --skipLibCheck --esModuleInterop",
     "test:types": "cd test && tsc"
   },
   "keywords": [
