--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -29,9 +29,10 @@
     "prebuild": "rimraf dist",
     "build": "tsup src/index.ts --dts --format esm,cjs",
     "test": "mocha --timeout 60000 -r ts-node/register 'test/**.spec.ts'",
-    "test:export": "npm run test:esm && npm run test:commonjs",
+    "test:export": "npm run test:esm && npm run test:commonjs && npm run test:ts",
     "test:esm": "node test/esmTest.mjs",
     "test:commonjs": "node test/commonjsTest.js",
+    "test:ts": "tsc test/tsTest.ts --noEmit --skipLibCheck --esModuleInterop",
     "coverage": "nyc npm run test",
     "prepare": "npm run build"
   },
