ignore tsup.config

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -12,5 +12,5 @@
     "resolveJsonModule": true,
     "esModuleInterop": true
   },
-  "exclude": ["test", "dist", "node_modules"]
+  "exclude": ["test", "dist", "node_modules", "tsup.config.ts"]
 }
