--- a/.github/workflows/create-release-candidate.yml
+++ b/.github/workflows/create-release-candidate.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   create-release-candidate:
+    timeout-minutes: 2
     runs-on: ubuntu-latest
     steps:
       - uses: dequelabs/axe-api-team-public/.github/actions/create-release-candidate-v1@main
