--- a/.github/workflows/semantic-pr-title.yml
+++ b/.github/workflows/semantic-pr-title.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   semantic-pr-title:
+    timeout-minutes: 1
     runs-on: ubuntu-latest
     steps:
       - uses: dequelabs/semantic-pr-title@v1
