--- a/packages/webdriverio/tsconfig.json
+++ b/packages/webdriverio/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "types": ["node", "@wdio/globals/types"]
+    "types": ["node", "mocha", "@wdio/globals/types"]
   },
   "include": ["src"],
   "exclude": ["test"]
