pin WDIO@8.8.2 (for now), skip `node_modules` check in React

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -10,7 +10,8 @@
     "target": "esnext",
     "lib": ["dom", "esnext"],
     "resolveJsonModule": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "skipLibCheck": true
   },
   "exclude": ["test", "dist", "node_modules", "tsup.config.ts"]
 }
