--- a/packages/webdriverio/package.json
+++ b/packages/webdriverio/package.json
@@ -48,9 +48,8 @@
     "webdriverio"
   ],
   "dependencies": {
-    "axe-core": "~4.8.3",
-    "cssesc": "^3.0.0",
-    "undefined": "^0.1.0"
+    "axe-core": "~4.8.2",
+    "cssesc": "^3.0.0"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
