--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,8 +52,7 @@
     "chromedriver": "latest",
     "colors": "^1.4.0",
     "commander": "^9.4.1",
-    "selenium-webdriver": "^4.8.1",
-    "undefined": "^0.1.0"
+    "selenium-webdriver": "^4.8.1"
   },
   "devDependencies": {
     "@types/chai": "^4.3.3",
