--- a/packages/puppeteer/package.json
+++ b/packages/puppeteer/package.json
@@ -55,8 +55,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axe-core": "~4.8.3",
-    "undefined": "^0.1.0"
+    "axe-core": "~4.8.3"
   },
   "peerDependencies": {
     "puppeteer": ">=1.10.0"
