--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,3 +89,5 @@ jobs:
             --generate-notes \
             --repo ${{ github.repository }}
             --target master
+        env:
+          GH_TOKEN: ${{ github.token }}
