--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -60,8 +60,9 @@
   "author": "Dylan Barrell (dylan@barrell.com)",
   "license": "MPL-2.0",
   "dependencies": {
-    "axe-core": "~4.8.3",
-    "requestidlecallback": "^0.3.0"
+    "axe-core": "~4.8.4",
+    "requestidlecallback": "^0.3.0",
+    "undefined": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
