--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -89,7 +89,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axe-core": "~4.8.3"
+    "axe-core": "~4.8.4",
+    "undefined": "^0.1.0"
   },
   "peerDependencies": {
     "selenium-webdriver": ">3.0.0-beta  || >=2.53.1 || >4.0.0-alpha"
