ci: fix tagging when creating releases

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -84,7 +84,7 @@ jobs:
             --yes
       - run: |
           PKG_VERSION=$(jq -r .version < lerna.json)
-          gh release create $PKG_VERSION \
+          gh release create v$PKG_VERSION \
             --title "Release $PKG_VERSION" \
             --generate-notes \
             --repo ${{ github.repository }} \
