--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -86,7 +86,7 @@ jobs:
           PKG_VERSION=$(jq -r .version < lerna.json)
           gh release create v$PKG_VERSION \
             --title "Release $PKG_VERSION" \
-            --generate-notes \
+            --notes-file CHANGELOG.md \
             --repo ${{ github.repository }} \
             --target master
         env:
