--- a/packages/playwright/package.json
+++ b/packages/playwright/package.json
@@ -51,8 +51,7 @@
     "prepare": "npx playwright install && npm run build"
   },
   "dependencies": {
-    "axe-core": "~4.9.0",
-    "undefined": "^0.1.0"
+    "axe-core": "~4.9.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.34.3",
