--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -61,8 +61,7 @@
   "license": "MPL-2.0",
   "dependencies": {
     "axe-core": "~4.9.0",
-    "requestidlecallback": "^0.3.0",
-    "undefined": "^0.1.0"
+    "requestidlecallback": "^0.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
