--- a/packages/webdriverjs/package.json
+++ b/packages/webdriverjs/package.json
@@ -89,8 +89,7 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axe-core": "~4.9.0",
-    "undefined": "^0.1.0"
+    "axe-core": "~4.9.0"
   },
   "peerDependencies": {
     "selenium-webdriver": ">3.0.0-beta  || >=2.53.1 || >4.0.0-alpha"
