--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -59,11 +59,13 @@
     "@types/chromedriver": "^81.0.1",
     "@types/mocha": "^10.0.0",
     "@types/selenium-webdriver": "^4.1.5",
+    "@types/sinon": "^17.0.3",
     "chai": "^4.3.6",
     "execa": "5.1.1",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "rimraf": "^5.0.5",
+    "sinon": "^17.0.1",
     "tempy": "^1.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
