ci: use `PAT` to assign teams when syncing branches

--- a/.github/workflows/sync-master-develop.yml
+++ b/.github/workflows/sync-master-develop.yml
@@ -10,10 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 2
     steps:
-      - uses: dequelabs/action-sync-branches@v1
+      - uses: dequelabs/action-sync-branches@v1.0.1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT }}
           pr-title: 'chore: merge master into develop'
-          pr-reviewers: michael-siek,stephenmathieson
+          pr-team-reviewers: axe-api-team
           pr-labels: chore
-          pr-template: .github/PULL_REQUEST_TEMPLATE.md
