ci: update sync to master to include team-reviewers (#1062)
This updates the action to fix the no pr template issue as well as
switch to pr team reviewer instead of specific users. Also use `PAT` to
allow team reviewers
no qa required

--- a/.github/workflows/sync-master-develop.yml
+++ b/.github/workflows/sync-master-develop.yml
@@ -12,8 +12,7 @@ jobs:
     steps:
       - uses: dequelabs/action-sync-branches@v1
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.PAT }}
           pr-title: 'chore: merge master into develop'
-          pr-reviewers: michael-siek,stephenmathieson
+          pr-team-reviewers: axe-api-team
           pr-labels: chore
-          pr-template: .github/PULL_REQUEST_TEMPLATE.md
