--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,13 +6,12 @@ on:
       - develop
       - release
       - master
-      - fix-release
 
 jobs:
   canary:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    if: github.ref_name == 'fix-release' && github.repository_owner == 'dequelabs'
+    if: github.ref_name == 'develop' && github.repository_owner == 'dequelabs'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
