--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -37,6 +37,8 @@ updates:
         versions: ['>=2.0.0']
       - dependency-name: 'chai'
         versions: ['>=5.0.0']
+      - dependency-name: 'lerna'
+        versions: ['>=8.1.3']
       # Breaking change due to node version requirements
       - dependency-name: 'commander'
         versions: ['>=10.0.0']
