--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -52,6 +52,7 @@
     "chromedriver": "latest",
     "colors": "^1.4.0",
     "commander": "^9.4.1",
+    "dotenv": "^16.4.5",
     "selenium-webdriver": "~4.22.0"
   },
   "devDependencies": {
